--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dio: ^5.9.0
   flutter_bloc: ^9.1.1
   lottie: ^3.3.2
+  liquid_pull_refresh: ^1.0.6
 
 dev_dependencies:
   flutter_test:
