--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   lottie: ^3.3.2
   liquid_pull_refresh: ^1.0.6
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
